--- a/dajow/package.json
+++ b/dajow/package.json
@@ -29,10 +29,12 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
+    "firebase-functions": "^7.0.5",
     "framer-motion": "^12.26.2",
     "jspdf": "^4.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
+    "nodemailer": "^8.0.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-firebase-hooks": "^5.1.1",
@@ -49,6 +51,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.23",
